tests/checker/ok/multiline_method_call_args.ow
main = () -> Unit {
    "hello"
        .concat("world")
        .print()
}
