tests/checker/fail/unknown_newtype_field.ow
Greeting = String

main = () -> Unit {
    Greeting("hi").Int.print()
}
